[tool.poetry]
name = "test-task-srapy-autoria"
version = "0.1.0"
description = ""
authors = ["TT1410 <112493080+TT1410@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "test_task_srapy_autoria"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.0"
sqlalchemy = "^2.0.22"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
